Correções da sessão de comentarios

--- a/tcc/src/main/resources/static/css/cadastro.css
+++ b/tcc/src/main/resources/static/css/cadastro.css
@@ -650,5 +650,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   #divImg img{
     cursor: pointer;
   }
+  
+  #imgPrincipal{
+	  max-width: 200px;
+      max-height: 140px;
+  }
 
   
