--- a/tcc/src/main/resources/templates/cadastro/formCadastro.html
+++ b/tcc/src/main/resources/templates/cadastro/formCadastro.html
@@ -18,7 +18,7 @@
 			<div class="agileits-top">
 				<div class="image-upload" id="divImg">
 					<label for="file-input">
-						<img id="imgPrincipal" src="" alt="Foto do Estabelecimento" />
+						<img id="imgPrincipal" src="" alt="Sua foto aqui" />
 					</label>
 
 					<input id="file-input" style="display: none;" type="file" accept="image/*" />
