--- a/tcc/src/main/resources/templates/estabelecimento/formEstabelecimento.html
+++ b/tcc/src/main/resources/templates/estabelecimento/formEstabelecimento.html
@@ -106,7 +106,7 @@
 						<fieldset>
 							<div class="row">
 								<div class="col-sm-3 col-lg-2 hidden-xs">
-									<img class="img-responsive" src="https://bootdey.com/img/Content/avatar/avatar1.png"
+									<img class="img-responsive" id="imgUsr" src="https://bootdey.com/img/Content/avatar/avatar1.png"
 										alt="">
 								</div>
 								<div class="form-group col-xs-12 col-sm-9 col-lg-10">
