--- a/tcc/src/main/resources/static/css/estabelecimento.css
+++ b/tcc/src/main/resources/static/css/estabelecimento.css
@@ -700,6 +700,18 @@ progress {
 	flex: 1 0 0%;
 }
 
+.row {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-right: calc(-0.5 * var(--bs-gutter-x));
+  margin-left: calc(-0.5 * var(--bs-gutter-x));
+  gap: 2rem;
+  align-items: center;
+}
+
 .row-cols-auto>* {
 	flex: 0 0 auto;
 	width: auto;
@@ -11965,10 +11977,7 @@ header {
 	padding-bottom: 6rem;
 }
 
-#titulo {
-	text-align: center;
-	margin-top: 6rem;
-}
+
 
 #services {
 	display: flex;
@@ -11984,13 +11993,6 @@ header {
 
 body {
 	margin: 0;
-	font-family: var(--bs-body-font-family);
-	font-size: var(--bs-body-font-size);
-	font-weight: var(--bs-body-font-weight);
-	line-height: var(--bs-body-line-height);
-	color: var(--bs-body-color);
-	text-align: var(--bs-body-text-align);
-	background-color: var(--bs-body-bg);
 	-webkit-text-size-adjust: 100%;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	display: flex;
@@ -12010,29 +12012,16 @@ body {
 	gap: 3rem;
 }
 
-#sobre {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	gap: 3rem;
-	margin-top: 4rem;
+
+#sobre{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-#sobre img {
-	width: 400px;
-}
-
-#textoSobre {
-	width: 50%;
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-}
-
-#textoSobre p {
-	font-family: roboto;
-	font-size: 16px;
+#sobre p{
+  line-height: 2rem;
+  font-size: 20px;
 }
 
 #mainNav {
@@ -12177,41 +12166,15 @@ footer {
 
 
 #comments {
-	background-color: #FFFFFF;
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+	background-color: #ffffff;
 	width: 50%;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-#comments form {
-	margin-bottom: 30px;
-}
-
-.button-9:disabled {
-	cursor: default;
-}
-
-.button-9:focus {
-	box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
-}
-
-#comments .btn {
-	margin-top: 7px;
-}
-
-#comments form fieldset {
-	clear: both;
-}
-
-#comments form textarea {
-	height: 100px;
-}
-
-#comments .media {
-	border-top: 1px dashed #DDDDDD;
-	padding: 20px 0;
-	margin: 0;
-}
 
 #comments .media>.pull-left {
 	margin-right: 20px;
@@ -12265,14 +12228,81 @@ footer {
 	max-width: 100px;
 }
 
-#comentarios{
-	margin-left: 20px;
-}
 
 
 #comentariosBanco{
-	display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    width: 80%;
+    display: flex;
+    margin-left: 20px;
+    gap: 1rem;
 }
+
+#caixaComentario{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 70%;
+    justify-content: space-between;
+}
+
+#numeroComentarios{
+    margin-left: 20px;
+}
+
+#btnEnviar{
+    width: 20%;
+  background-color: #0095ff;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.15385;
+  margin: 0;
+  outline: none;
+  padding: 8px .8em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  white-space: nowrap;
+  align-self: flex-end;
+}
+
+#btnEnviar:hover,
+#btnEnviar:focus {
+  background-color: #07c;
+}
+
+#btnEnviar:focus {
+  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+}
+
+#btnEnviar:active {
+  background-color: #0064bd;
+  box-shadow: none;
+}
+
+.media{
+    display: flex;
+    margin-left: 20px;
+}
+
+
+
+#estabelecimentoContainer{
+	margin-top: 8rem;
+}
+
+#comentarios{
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	}
