--- a/tcc/src/main/resources/templates/cadastro/formCadastroEstabelecimento.html
+++ b/tcc/src/main/resources/templates/cadastro/formCadastroEstabelecimento.html
@@ -2,133 +2,146 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/cadEstabelecimento.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@300;500;700&display=swap"
-    rel="stylesheet">
-  <title>ODIN - Cadastro Estabelecimento</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/css/cadEstabelecimento.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@300;500;700&display=swap"
+		rel="stylesheet">
+	<title>ODIN - Cadastro Estabelecimento</title>
 </head>
 
 <body>
-  <div class="login-page">
-    <div class="form">
-      <div class="login-form" id="form">
-        <div class="image-upload">
-          <label for="file-input">
-            <img id="imgPrincipal" src="" alt="Foto do Estabelecimento" />
-          </label>
+	<div class="login-page">
+		<div class="form">
+			<div class="login-form" id="form">
+				<div class="image-upload">
+					<label for="file-input">
+						<img id="imgPrincipal" src="" alt="Foto do Estabelecimento" />
+					</label>
 
-          <input id="file-input" style="display: none;" type="file" accept="image/*" />
-        </div>
-        <input type="text" id="nome" name="nome" placeholder="Informe o nome do Estabelecimento" />
-        <input type="text" id="cnpj" name="cnpj" placeholder="Digite seu CNPJ" maxlength="18" />
-        <div class="form-group">
-          <textarea class="form-control" id="descricao" placeholder="Descreva seu Estabelecimento..." minlength="150"
-            maxlength="249" rows="4"></textarea>
-        </div>
-        <button id="btnProsseguir">Prosseguir</button>
+					<input id="file-input" style="display: none;" type="file" accept="image/*" />
+				</div>
+				<input type="text" id="nome" name="nome" placeholder="Informe o nome do Estabelecimento" />
+				<input type="text" id="cnpj" name="cnpj" placeholder="Digite seu CNPJ" maxlength="18" />
+				<div class="form-group">
+					<textarea class="form-control" id="descricao" placeholder="Descreva seu Estabelecimento..."
+						minlength="150" maxlength="249" rows="4"></textarea>
+				</div>
+				<button id="btnProsseguir">Prosseguir</button>
 
-        <div class="alert alert-primary" role="alert" id="erroMsg">
-          CPF ou Email invalidos !
-        </div>
-        <p class="message"> Já possui cadastro? <a href="/login">Clique aqui !</a></p>
-      </div>
-
-
-
-      <div class="login-form" id="sub-form">
-        <input type="text" id="cep" name="cep" placeholder="Informe o CEP" />
-        <input type="text" id="localidade" name="localidade" placeholder="Informe sua localidade" />
-        <input type="text" id="bairro" name="bairro" placeholder="Informe seu bairro" />
-        <input class="text" type="text" name="logradouro" placeholder="Informe seu logradouro" required=""
-          id="logradouro">
-        <button id="btnEnviar">Enviar</button>
-        <div class="alert alert-primary" id="erroMsg2" role="alert">
-          CPF ou Email invalidos !
-        </div>
-      </div>
-
-      <div class="login-form" id="terceiro_form">
-
-          <div class="questionario">
-            <label for="acessibilidade" class="">O estabelecimento tem uma entrada livre de degraus ou, se houver degraus,
-              possui uma rampa ou plataforma elevatória acessível para cadeiras de rodas?</label>
-            <div class="formcheck">
-              <div class="checkLabel">
-                <input type="radio" class="check"  name="acessibilidade" value="S">
-                <label for="">Sim</label>
-              </div>
-  
-              <div class="checkLabel">
-                <input type="radio" class="check"  name="acessibilidade" value="N">
-                <label for="">Não</label>
-              </div>
-            </div>
-          </div>
-
-          <div class="questionario">
-            <label for="acessibilidade" class=""> Há vagas de estacionamento designadas e claramente marcadas para pessoas com deficiência, preferencialmente próximas à entrada?
-            </label>
-            <div class="formcheck">
-              <div class="checkLabel">
-                <input type="radio" class="check"  name="acessibilidade2" value="S">
-                <label for="">Sim</label>
-              </div>
-  
-              <div class="checkLabel">
-                <input type="radio" class="check"  name="acessibilidade2" value="N">
-                <label for="">Não</label>
-              </div>
-            </div>
-          </div>
-
-          <div class="questionario">
-            <label for="acessibilidade" class="">Os banheiros estão equipados com barras de apoio, espaço adequado para manobra de cadeira de rodas e pias acessíveis?
-              </label>
-            <div class="formcheck">
-              <div class="checkLabel">
-                <input type="radio" class="check"  name="acessibilidade3" value="S">
-                <label for="">Sim</label>
-              </div>
-  
-              <div class="checkLabel">
-                <input type="radio" class="check"  name="acessibilidade3" value="N">
-                <label for="">Não</label>
-              </div>
-            </div>
-          </div>
-
-        <button id="btnProsseguir2">Prosseguir</button>
-        <div class="alert alert-primary" id="erroMsg3" role="alert">
-          CPF ou Email invalidos !
-        </div>
-      </div>
-
-    </div>
-  </div>
-  </div>
+				<div class="alert alert-primary" role="alert" id="erroMsg">
+					CPF ou Email invalidos !
+				</div>
+				<p class="message"> Já possui cadastro? <a href="/login">Clique aqui !</a></p>
+			</div>
 
 
 
-  <!-- Add jQuery library -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- Add jQuery.mask plugin -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+			<div class="login-form" id="sub-form">
+				<input type="text" id="cep" name="cep" placeholder="Informe o CEP" />
+				<input type="text" id="localidade" name="localidade" placeholder="Informe sua localidade" />
+				<input type="text" id="bairro" name="bairro" placeholder="Informe seu bairro" />
+				<input class="text" type="text" name="logradouro" placeholder="Informe seu logradouro" required=""
+					id="logradouro">
+				<button id="btnProsseguir3">Prosseguir</button>
+				<div class="alert alert-primary" id="erroMsg2" role="alert"></div>
+			</div>
 
 
-  <script src="/js/scriptCadEstabelecimento.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
+			<div class="login-form" id="quarto_form">
+				<input type="text" id="diasFuncionamento" name="horarioAbertura" placeholder="Informe os dias de funcionamento" />
+				<label>Horario de Abertura</label>	
+				<input type="time" id="horarioAbertura" name="horarioAbertura"/>
+				<label>Horario de Fechamento</label>
+				<input type="time" id="horarioFechamento" name="horarioFechamento"
+					placeholder="Horario de Fechamento" />
+				<button id="btnEnviar">Enviar</button>
+				<div class="alert alert-primary" id="erroMsg3" role="alert"> </div>
+			</div>
+
+
+			<div class="login-form" id="terceiro_form">
+
+				<div class="questionario">
+					<label for="acessibilidade" class="">O estabelecimento tem uma entrada livre de degraus ou, se
+						houver degraus,
+						possui uma rampa ou plataforma elevatória acessível para cadeiras de rodas?</label>
+					<div class="formcheck">
+						<div class="checkLabel">
+							<input type="radio" class="check" name="acessibilidade" value="S">
+							<label for="">Sim</label>
+						</div>
+
+						<div class="checkLabel">
+							<input type="radio" class="check" name="acessibilidade" value="N">
+							<label for="">Não</label>
+						</div>
+					</div>
+				</div>
+
+				<div class="questionario">
+					<label for="acessibilidade" class=""> Há vagas de estacionamento designadas e claramente marcadas
+						para pessoas com deficiência, preferencialmente próximas à entrada?
+					</label>
+					<div class="formcheck">
+						<div class="checkLabel">
+							<input type="radio" class="check" name="acessibilidade2" value="S">
+							<label for="">Sim</label>
+						</div>
+
+						<div class="checkLabel">
+							<input type="radio" class="check" name="acessibilidade2" value="N">
+							<label for="">Não</label>
+						</div>
+					</div>
+				</div>
+
+				<div class="questionario">
+					<label for="acessibilidade" class="">Os banheiros estão equipados com barras de apoio, espaço
+						adequado para manobra de cadeira de rodas e pias acessíveis?
+					</label>
+					<div class="formcheck">
+						<div class="checkLabel">
+							<input type="radio" class="check" name="acessibilidade3" value="S">
+							<label for="">Sim</label>
+						</div>
+
+						<div class="checkLabel">
+							<input type="radio" class="check" name="acessibilidade3" value="N">
+							<label for="">Não</label>
+						</div>
+					</div>
+				</div>
+
+				<button id="btnProsseguir2">Prosseguir</button>
+				<div class="alert alert-primary" id="erroMsg3" role="alert"></div>
+			</div>
+
+		</div>
+	</div>
+	</div>
+
+
+
+	<!-- Add jQuery library -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<!-- Add jQuery.mask plugin -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+
+
+	<script src="/js/scriptCadEstabelecimento.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
