--- a/tcc/src/main/resources/static/css/estabelecimento.css
+++ b/tcc/src/main/resources/static/css/estabelecimento.css
@@ -12306,3 +12306,16 @@ footer {
 	flex-direction: column;
 	gap: 2rem;
 	}
+	
+#map{
+    height: 350px;
+    width: 590px;
+}
+
+#caixaLocal h3{
+    font-weight: bold;
+}
+
+#caixaLocal p{
+    font-family: 'Times New Roman', Times, serif;
+}
