--- a/tcc/src/main/resources/templates/estabelecimento/formEstabelecimento.html
+++ b/tcc/src/main/resources/templates/estabelecimento/formEstabelecimento.html
@@ -10,6 +10,8 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+		integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
 	<link href="/css/estabelecimento.css" rel="stylesheet" />
 </head>
 
@@ -100,8 +102,18 @@
 
 	</div>
 	
+		<div id="caixaLocal">
+		<div id="localizaoTexto">
+			<h2>Localização</h2>
+			<p>Avenida Tancredo Neves 148 Caminho das Árvores, Salvador, State of Bahia 41820-908</p>
+		</div>
+		<div id="map">
 
-	
+		</div>
+	</div>
+
+
+
 
 	<!--Comentarios -->
 	<section class="content-item" id="comments">
@@ -118,9 +130,9 @@
 			</div>
 		</div>
 		<h3 id="numeroComentarios"> 5 Comentarios</h3>
-		
+
 		<div id="comentarios">
-			
+
 		</div>
 
 
@@ -132,11 +144,15 @@
 			<p class="m-0 text-center text-white">Copyright &copy; ODIN Website 2023</p>
 		</div>
 	</footer>
-	<script src="/js/scriptEstabelecimento.js"></script>
 	<!-- Bootstrap core JS-->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- Formatar Horas/Data -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+	<!-- Mapa -->
+	<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+		integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+	<script src="/js/scriptEstabelecimento.js"></script>
+
 
 </body>
 
