Adição do horario de funcionamento e algumas correções na tela do estabelecimento.

--- a/tcc/src/main/resources/static/css/estabelecimento.css
+++ b/tcc/src/main/resources/static/css/estabelecimento.css
@@ -12319,3 +12319,17 @@ footer {
 #caixaLocal p{
     font-family: 'Times New Roman', Times, serif;
 }
+
+#caixaLocal{
+	display: flex;
+    align-items: center;
+    gap: 2rem;
+    flex-direction: row;
+}
+
+.unit__option{
+	font-weight: bold;
+	font-size: 17px;
+}
+
+
