--- a/tcc/src/main/resources/templates/cadastro/formCadastroEstabelecimento.html
+++ b/tcc/src/main/resources/templates/cadastro/formCadastroEstabelecimento.html
@@ -30,6 +30,7 @@
 				</div>
 				<input type="text" id="nome" name="nome" placeholder="Informe o nome do Estabelecimento" />
 				<input type="text" id="cnpj" name="cnpj" placeholder="Digite seu CNPJ" maxlength="18" />
+				<input type="tel" maxlength="15" id="telefone" name="telefone" placeholder="Informe o telefone de contato" onkeyup="handlePhone(event)"  />
 				<div class="form-group">
 					<textarea class="form-control" id="descricao" placeholder="Descreva seu Estabelecimento..."
 						minlength="150" maxlength="249" rows="4"></textarea>
