Mudanças na parte do usuario

--- a/tcc/src/main/resources/templates/login/formLogin.html
+++ b/tcc/src/main/resources/templates/login/formLogin.html
@@ -13,7 +13,7 @@
 <body>
   <div class="login-page">
     <div id="logo-odin">
-      <img src="images/Odin-Logo.png" alt="Logo-Odin">
+      <a href="/"><img src="images/Odin-Logo.png" alt="Logo-Odin"></a>
     </div>
     <div class="form">
       <form class="login-form" action="/login" method="post">
