--- a/tcc/src/main/resources/static/css/home.css
+++ b/tcc/src/main/resources/static/css/home.css
@@ -1,530 +1,8 @@
-@charset "UTF-8";
-
-:root {
-	--bs-blue: #0d6efd;
-	--bs-indigo: #6610f2;
-	--bs-purple: #6f42c1;
-	--bs-pink: #d63384;
-	--bs-red: #dc3545;
-	--bs-orange: #fd7e14;
-	--bs-yellow: #ffc107;
-	--bs-green: #198754;
-	--bs-teal: #20c997;
-	--bs-cyan: #0dcaf0;
-	--bs-black: #000;
-	--bs-white: #fff;
-	--bs-gray: #6c757d;
-	--bs-gray-dark: #343a40;
-	--bs-gray-100: #f8f9fa;
-	--bs-gray-200: #e9ecef;
-	--bs-gray-300: #dee2e6;
-	--bs-gray-400: #ced4da;
-	--bs-gray-500: #adb5bd;
-	--bs-gray-600: #6c757d;
-	--bs-gray-700: #495057;
-	--bs-gray-800: #343a40;
-	--bs-gray-900: #212529;
-	--bs-primary: #0d6efd;
-	--bs-secondary: #6c757d;
-	--bs-success: #198754;
-	--bs-info: #0dcaf0;
-	--bs-warning: #ffc107;
-	--bs-danger: #dc3545;
-	--bs-light: #f8f9fa;
-	--bs-dark: #212529;
-	--bs-primary-rgb: 13, 110, 253;
-	--bs-secondary-rgb: 108, 117, 125;
-	--bs-success-rgb: 25, 135, 84;
-	--bs-info-rgb: 13, 202, 240;
-	--bs-warning-rgb: 255, 193, 7;
-	--bs-danger-rgb: 220, 53, 69;
-	--bs-light-rgb: 248, 249, 250;
-	--bs-dark-rgb: 33, 37, 41;
-	--bs-white-rgb: 255, 255, 255;
-	--bs-black-rgb: 0, 0, 0;
-	--bs-body-color-rgb: 33, 37, 41;
-	--bs-body-bg-rgb: 255, 255, 255;
-	--bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	--bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-	--bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-	--bs-body-font-family: var(--bs-font-sans-serif);
-	--bs-body-font-size: 1rem;
-	--bs-body-font-weight: 400;
-	--bs-body-line-height: 1.5;
-	--bs-body-color: #212529;
-	--bs-body-bg: #fff;
-	--bs-border-width: 1px;
-	--bs-border-style: solid;
-	--bs-border-color: #dee2e6;
-	--bs-border-color-translucent: rgba(0, 0, 0, 0.175);
-	--bs-border-radius: 0.375rem;
-	--bs-border-radius-sm: 0.25rem;
-	--bs-border-radius-lg: 0.5rem;
-	--bs-border-radius-xl: 1rem;
-	--bs-border-radius-2xl: 2rem;
-	--bs-border-radius-pill: 50rem;
-	--bs-link-color: #0d6efd;
-	--bs-link-hover-color: #0a58ca;
-	--bs-code-color: #d63384;
-	--bs-highlight-bg: #fff3cd;
-}
-
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	:root {
-		scroll-behavior: smooth;
-	}
-}
-
-body {
-	margin: 0;
-	font-family: var(--bs-body-font-family);
-	font-size: var(--bs-body-font-size);
-	font-weight: var(--bs-body-font-weight);
-	line-height: var(--bs-body-line-height);
-	color: var(--bs-body-color);
-	text-align: var(--bs-body-text-align);
-	background-color: var(--bs-body-bg);
-	-webkit-text-size-adjust: 100%;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-hr {
-	margin: 1rem 0;
-	color: inherit;
-	border: 0;
-	border-top: 1px solid;
-	opacity: 0.25;
-}
-
-h6,
-.h6,
-h5,
-.h5,
-h4,
-.h4,
-h3,
-.h3,
-h2,
-.h2,
-h1,
-.h1 {
-	margin-top: 0;
-	margin-bottom: 0.5rem;
-	font-weight: 500;
-	line-height: 1.2;
-}
-
-h1,
-.h1 {
-	font-size: calc(1.375rem + 1.5vw);
-}
-
-@media (min-width: 1200px) {
-
-	h1,
-	.h1 {
-		font-size: 2.5rem;
-	}
-}
-
-h2,
-.h2 {
-	font-size: calc(1.325rem + 0.9vw);
-}
-
-@media (min-width: 1200px) {
-
-	h2,
-	.h2 {
-		font-size: 2rem;
-	}
-}
-
-h3,
-.h3 {
-	font-size: calc(1.3rem + 0.6vw);
-}
-
-@media (min-width: 1200px) {
-
-	h3,
-	.h3 {
-		font-size: 1.75rem;
-	}
-}
-
-h4,
-.h4 {
-	font-size: calc(1.275rem + 0.3vw);
-}
-
-@media (min-width: 1200px) {
-
-	h4,
-	.h4 {
-		font-size: 1.5rem;
-	}
-}
-
-h5,
-.h5 {
-	font-size: 1.25rem;
-}
-
-h6,
-.h6 {
-	font-size: 1rem;
-}
-
-p {
-	margin-top: 0;
-	margin-bottom: 1rem;
-}
-
-abbr[title] {
-	-webkit-text-decoration: underline dotted;
-	text-decoration: underline dotted;
-	cursor: help;
-	-webkit-text-decoration-skip-ink: none;
-	text-decoration-skip-ink: none;
-}
-
-address {
-	margin-bottom: 1rem;
-	font-style: normal;
-	line-height: inherit;
-}
-
-ol,
-ul {
-	padding-left: 2rem;
-}
-
-ol,
-ul,
-dl {
-	margin-top: 0;
-	margin-bottom: 1rem;
-}
-
-ol ol,
-ul ul,
-ol ul,
-ul ol {
-	margin-bottom: 0;
-}
-
-dt {
-	font-weight: 700;
-}
-
-dd {
-	margin-bottom: 0.5rem;
-	margin-left: 0;
-}
-
-blockquote {
-	margin: 0 0 1rem;
-}
-
-b,
-strong {
-	font-weight: bolder;
-}
-
-small,
-.small {
-	font-size: 0.875em;
-}
-
-mark,
-.mark {
-	padding: 0.1875em;
-	background-color: var(--bs-highlight-bg);
-}
-
-sub,
-sup {
-	position: relative;
-	font-size: 0.75em;
-	line-height: 0;
-	vertical-align: baseline;
-}
-
-sub {
-	bottom: -0.25em;
-}
-
-sup {
-	top: -0.5em;
-}
-
-a {
-	color: var(--bs-link-color);
-	text-decoration: underline;
-}
-
-a:hover {
-	color: var(--bs-link-hover-color);
-}
-
-a:not([href]):not([class]),
-a:not([href]):not([class]):hover {
-	color: inherit;
-	text-decoration: none;
-}
-
-pre,
-code,
-kbd,
-samp {
-	font-family: var(--bs-font-monospace);
-	font-size: 1em;
-}
-
-pre {
-	display: block;
-	margin-top: 0;
-	margin-bottom: 1rem;
-	overflow: auto;
-	font-size: 0.875em;
-}
-
-pre code {
-	font-size: inherit;
-	color: inherit;
-	word-break: normal;
-}
-
-code {
-	font-size: 0.875em;
-	color: var(--bs-code-color);
-	word-wrap: break-word;
-}
-
-a>code {
-	color: inherit;
-}
-
-kbd {
-	padding: 0.1875rem 0.375rem;
-	font-size: 0.875em;
-	color: var(--bs-body-bg);
-	background-color: var(--bs-body-color);
-	border-radius: 0.25rem;
-}
-
-kbd kbd {
+* {
+	font-family: 'Poppins', sans-serif;
+	font-family: 'Roboto', sans-serif;
+	margin:0;
 	padding: 0;
-	font-size: 1em;
-}
-
-figure {
-	margin: 0 0 1rem;
-}
-
-img,
-svg {
-	vertical-align: middle;
-}
-
-table {
-	caption-side: bottom;
-	border-collapse: collapse;
-}
-
-caption {
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
-	color: #6c757d;
-	text-align: left;
-}
-
-th {
-	text-align: inherit;
-	text-align: -webkit-match-parent;
-}
-
-thead,
-tbody,
-tfoot,
-tr,
-td,
-th {
-	border-color: inherit;
-	border-style: solid;
-	border-width: 0;
-}
-
-label {
-	display: inline-block;
-}
-
-button {
-	border-radius: 0;
-}
-
-button:focus:not(:focus-visible) {
-	outline: 0;
-}
-
-input,
-button,
-select,
-optgroup,
-textarea {
-	margin: 0;
-	font-family: inherit;
-	font-size: inherit;
-	line-height: inherit;
-}
-
-button,
-select {
-	text-transform: none;
-}
-
-[role=button] {
-	cursor: pointer;
-}
-
-select {
-	word-wrap: normal;
-}
-
-select:disabled {
-	opacity: 1;
-}
-
-[list]:not([type=date]):not([type=datetime-local]):not([type=month]):not([type=week]):not([type=time])::-webkit-calendar-picker-indicator {
-	display: none !important;
-}
-
-button,
-[type=button],
-[type=reset],
-[type=submit] {
-	-webkit-appearance: button;
-}
-
-button:not(:disabled),
-[type=button]:not(:disabled),
-[type=reset]:not(:disabled),
-[type=submit]:not(:disabled) {
-	cursor: pointer;
-}
-
-::-moz-focus-inner {
-	padding: 0;
-	border-style: none;
-}
-
-textarea {
-	resize: vertical;
-}
-
-fieldset {
-	min-width: 0;
-	padding: 0;
-	margin: 0;
-	border: 0;
-}
-
-legend {
-	float: left;
-	width: 100%;
-	padding: 0;
-	margin-bottom: 0.5rem;
-	font-size: calc(1.275rem + 0.3vw);
-	line-height: inherit;
-}
-
-@media (min-width: 1200px) {
-	legend {
-		font-size: 1.5rem;
-	}
-}
-
-legend+* {
-	clear: left;
-}
-
-::-webkit-datetime-edit-fields-wrapper,
-::-webkit-datetime-edit-text,
-::-webkit-datetime-edit-minute,
-::-webkit-datetime-edit-hour-field,
-::-webkit-datetime-edit-day-field,
-::-webkit-datetime-edit-month-field,
-::-webkit-datetime-edit-year-field {
-	padding: 0;
-}
-
-::-webkit-inner-spin-button {
-	height: auto;
-}
-
-[type=search] {
-	outline-offset: -2px;
-	-webkit-appearance: textfield;
-}
-
-/* rtl:raw:
-[type="tel"],
-[type="url"],
-[type="email"],
-[type="number"] {
-  direction: ltr;
-}
-*/
-::-webkit-search-decoration {
-	-webkit-appearance: none;
-}
-
-::-webkit-color-swatch-wrapper {
-	padding: 0;
-}
-
-::file-selector-button {
-	font: inherit;
-	-webkit-appearance: button;
-}
-
-output {
-	display: inline-block;
-}
-
-iframe {
-	border: 0;
-}
-
-summary {
-	display: list-item;
-	cursor: pointer;
-}
-
-progress {
-	vertical-align: baseline;
-}
-
-[hidden] {
-	display: none !important;
-}
-
-.lead {
-	font-size: 1.25rem;
-	font-weight: 300;
-}
-
-.display-1 {
-	font-size: calc(1.625rem + 4.5vw);
-	font-weight: 300;
-	line-height: 1.2;
 }
 
 @media (min-width: 1200px) {
@@ -3207,41 +2685,7 @@ textarea.form-control.is-invalid {
 	z-index: 4;
 }
 
-.btn {
-	--bs-btn-padding-x: 0.75rem;
-	--bs-btn-padding-y: 0.375rem;
-	--bs-btn-font-family: ;
-	--bs-btn-font-size: 1rem;
-	--bs-btn-font-weight: 400;
-	--bs-btn-line-height: 1.5;
-	--bs-btn-color: #212529;
-	--bs-btn-bg: transparent;
-	--bs-btn-border-width: 1px;
-	--bs-btn-border-color: transparent;
-	--bs-btn-border-radius: 0.375rem;
-	--bs-btn-hover-border-color: transparent;
-	--bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
-	--bs-btn-disabled-opacity: 0.65;
-	--bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
-	display: inline-block;
-	padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
-	font-family: var(--bs-btn-font-family);
-	font-size: var(--bs-btn-font-size);
-	font-weight: var(--bs-btn-font-weight);
-	line-height: var(--bs-btn-line-height);
-	color: var(--bs-btn-color);
-	text-align: center;
-	text-decoration: none;
-	vertical-align: middle;
-	cursor: pointer;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
-	border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
-	border-radius: var(--bs-btn-border-radius);
-	background-color: var(--bs-btn-bg);
-	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+
 
 @media (prefers-reduced-motion: reduce) {
 	.btn {
@@ -5686,41 +5130,7 @@ fieldset:disabled .btn {
 	}
 }
 
-.tooltip {
-	--bs-tooltip-zindex: 1080;
-	--bs-tooltip-max-width: 200px;
-	--bs-tooltip-padding-x: 0.5rem;
-	--bs-tooltip-padding-y: 0.25rem;
-	--bs-tooltip-margin: ;
-	--bs-tooltip-font-size: 0.875rem;
-	--bs-tooltip-color: #fff;
-	--bs-tooltip-bg: #000;
-	--bs-tooltip-border-radius: 0.375rem;
-	--bs-tooltip-opacity: 0.9;
-	--bs-tooltip-arrow-width: 0.8rem;
-	--bs-tooltip-arrow-height: 0.4rem;
-	z-index: var(--bs-tooltip-zindex);
-	display: block;
-	padding: var(--bs-tooltip-arrow-height);
-	margin: var(--bs-tooltip-margin);
-	font-family: var(--bs-font-sans-serif);
-	font-style: normal;
-	font-weight: 400;
-	line-height: 1.5;
-	text-align: left;
-	text-align: start;
-	text-decoration: none;
-	text-shadow: none;
-	text-transform: none;
-	letter-spacing: normal;
-	word-break: normal;
-	white-space: normal;
-	word-spacing: normal;
-	line-break: auto;
-	font-size: var(--bs-tooltip-font-size);
-	word-wrap: break-word;
-	opacity: 0;
-}
+
 
 .tooltip.show {
 	opacity: var(--bs-tooltip-opacity);
@@ -5804,51 +5214,6 @@ fieldset:disabled .btn {
 	border-radius: var(--bs-tooltip-border-radius);
 }
 
-.popover {
-	--bs-popover-zindex: 1070;
-	--bs-popover-max-width: 276px;
-	--bs-popover-font-size: 0.875rem;
-	--bs-popover-bg: #fff;
-	--bs-popover-border-width: 1px;
-	--bs-popover-border-color: var(--bs-border-color-translucent);
-	--bs-popover-border-radius: 0.5rem;
-	--bs-popover-inner-border-radius: calc(0.5rem - 1px);
-	--bs-popover-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-	--bs-popover-header-padding-x: 1rem;
-	--bs-popover-header-padding-y: 0.5rem;
-	--bs-popover-header-font-size: 1rem;
-	--bs-popover-header-color: ;
-	--bs-popover-header-bg: #f0f0f0;
-	--bs-popover-body-padding-x: 1rem;
-	--bs-popover-body-padding-y: 1rem;
-	--bs-popover-body-color: #212529;
-	--bs-popover-arrow-width: 1rem;
-	--bs-popover-arrow-height: 0.5rem;
-	--bs-popover-arrow-border: var(--bs-popover-border-color);
-	z-index: var(--bs-popover-zindex);
-	display: block;
-	max-width: var(--bs-popover-max-width);
-	font-family: var(--bs-font-sans-serif);
-	font-style: normal;
-	font-weight: 400;
-	line-height: 1.5;
-	text-align: left;
-	text-align: start;
-	text-decoration: none;
-	text-shadow: none;
-	text-transform: none;
-	letter-spacing: normal;
-	word-break: normal;
-	white-space: normal;
-	word-spacing: normal;
-	line-break: auto;
-	font-size: var(--bs-popover-font-size);
-	word-wrap: break-word;
-	background-color: var(--bs-popover-bg);
-	background-clip: padding-box;
-	border: var(--bs-popover-border-width) solid var(--bs-popover-border-color);
-	border-radius: var(--bs-popover-border-radius);
-}
 
 .popover .popover-arrow {
 	display: block;
@@ -12004,7 +11369,9 @@ header {
 	gap: 6rem;
 }
 
-#logo {
+
+
+#logo h1 {
 	font-size: 26px;
 }
 
@@ -12027,40 +11394,114 @@ body {
 	font-size: 20px;
 }
 
+/* Navbar  */
 
-/* Barra de Pesquisa */
-.navbar {
-	transition: top 0.3s;
+
+.navigation {
+	width: 100%;
+	background: black;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding: 10px;
+}
+
+#caixaPesquisa{
+  margin-top: 10px;
+}
+
+.links{
+  margin-top: 10px;
+}
+
+#logo{
+  margin-top: 10px;
+}
+#logo a {
+	color: white;
+	text-decoration: none;
+	list-style: none;
+}
+
+.links ul {
+	list-style: none;
+	display: flex;
+}
+
+.links li a {
+	margin-left: 15px;
+	color: white;
+	text-decoration: none;
+	font-size: 16px;
+	font-weight: 700;
+}
+
+.links a:hover {
+	color: wheat;
 }
 
 
-
-.navbar-scrolled {
-	top: 0;
-	background-color: #343a40;
+.pesquisa {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
 }
 
-.navbar-dark .nav-item .nav-link {
-	color: #fff;
+.caixaPesquisa a {
+	color: white;
 }
 
-.navbar-dark .nav-item .nav-link:hover {
-	background-color: rgba(255, 255, 255, 0.1);
-	transition: all 0.3s ease;
-	border-radius: 0.25rem;
-	color: #fff;
+.caixaPesquisa input {
+	width: 500px;
+	height: 40px;
+	border-radius: 5px;
+	padding-left: 20px;
 }
 
-.fa-li {
-	position: relative;
-	left: 0;
+.caixaPesquisa input::placeholder {
+	font-size: 14px;
 }
 
-#navbarSupportedContent{
-	margin-top: 10px;
+.listaProdutos {
+	z-index: 1;
+	position: absolute;
+	background: #eee;
+	width: 500px;
+	border-radius: 5px;
+	display: none;
 }
 
-#listaLinks{
-	margin-top: 10px;
-	margin-left: 0rem !important;
+
+.listaProdutos ul {
+	padding: 10px;
+	list-style: none;
+	width: 95%;
+	display: block;
+}
+
+.listaProdutos li a {
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	font-size: 18px;
+	color: black;
+	background: #f6f6f6;
+	border: 1px solid #ddd;
+	padding: 12px;
+}
+
+.listaProdutos li a:hover {
+	background: #eee;
+}
+
+.item-name {
+	margin-left: 15px;
+}
+
+/* Remove o ícone de limpar (x) do campo de input tipo search */
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-clear-button {
+    -webkit-appearance: none;
+    appearance: none;
+    display: none;
 }
