--- a/tcc/src/main/resources/templates/Home/index.html
+++ b/tcc/src/main/resources/templates/Home/index.html
@@ -7,56 +7,61 @@
 	<meta name="description" content="" />
 	<meta name="author" content="" />
 	<title>ODIN</title>
+	<!-- Boostrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<!-- Boostrap -->
+
+	<!--Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@300;500;700&display=swap"
+		rel="stylesheet">
+	<!--Google Fonts -->
+
+	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<!-- Font Awesome -->
+
 	<link href="css/home.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark  fixed-top">
-		<!-- Container wrapper -->
-		<div class="container">
-			<!-- Navbar brand -->
-			<a class="navbar-brand" href="#">ODIN</a>
 
-			<!-- Toggle button -->
-			<button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
-				data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<i class="fas fa-bars"></i>
-			</button>
 
-			<!-- Collapsible wrapper -->
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<form class="d-flex align-items-center w-100 form-search">
-					<div class="input-group">
-						<input type="search" class="form-control" placeholder="Search" aria-label="Search" />
-					</div>
-					<a href="#!" class="text-white"><i class="fas fa-search ps-3"></i></a>
-				</form>
+	<div class="navigation">
+		<div id="logo">
+			<a href="#">
+				<h1>ODIN</h1>
+			</a>
+		</div>
 
-				<ul class="navbar-nav ms-3">
-					<li class="nav-item me-3">
-						<a class="nav-link d-flex align-items-center" href="#!">Alguma coisa</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link d-flex align-items-center me-3" href="#!">
-							Indique um local
-						</a>
-					</li>
-					<li class="nav-item" style="width: 65px;">
-						<a class="nav-link d-flex align-items-center" id="login" href="#!">Login</a>
-					</li>
+		<div class="caixaPesquisa">
+			<div class="pesquisa">
+				<input type="search" id="inputPesquisa" placeholder="Oque você busca ?" >
+			</div>
+
+			<div class="listaProdutos">
+				<ul id="lista">
+
 				</ul>
 			</div>
 
-			<!-- Collapsible wrapper -->
 		</div>
-		<!-- Container wrapper -->
-	</nav>
+
+		
+	<div class="links">
+			<ul>
+				<li><a href="/estabelecimento/cadastrar">Indicar um Local</a></li>
+				<li><a href="/estabelecimentos/todos">Estabelecimentos</a></li>
+				<li><a href="#" id="login">Login</a></li>
+			</ul>
+		</div>
+
+
+	</div>
 
 	<div id="titulo">
 		<h2>Locais Mais Acessados</h2>
