--- a/tcc/src/main/resources/templates/Home/index.html
+++ b/tcc/src/main/resources/templates/Home/index.html
@@ -57,10 +57,9 @@
 				<li><a href="/estabelecimento/cadastrar">Indicar um Local</a></li>
 				<li><a href="/estabelecimentos/todos">Estabelecimentos</a></li>
 				<li><a href="#" id="login">Login</a></li>
+				<li><a href="" id="perfil">Meu Perfil</a></li>
 			</ul>
 		</div>
-
-
 	</div>
 
 	<div id="titulo">
