--- a/tcc/src/main/resources/templates/cadastro/formCadastro.html
+++ b/tcc/src/main/resources/templates/cadastro/formCadastro.html
@@ -23,7 +23,7 @@
 
 					<input id="file-input" style="display: none;" type="file" accept="image/*" />
 				</div>
-				<form method="post">
+				<form>
 					<input class="text" type="text" name="cpf" placeholder="Digite seu CPF" required="" id="cpf">
 					<input class="text email" type="text" name="nome" placeholder="Digite seu nome" required=""
 						id="nome">
@@ -50,7 +50,7 @@
 	<!-- mascara cpf -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-	<script src="js/scriptCadastro1.js"></script>
+	<script src="js/scriptCadUsuario.js"></script>
 
 </body>
 
