--- a/tcc/src/main/resources/templates/estabelecimento/estabelecimentos.html
+++ b/tcc/src/main/resources/templates/estabelecimento/estabelecimentos.html
@@ -47,8 +47,11 @@
 			<ul>
 				<li><a href="/cadastrar">Indicar um Local</a></li>
 				<li><a href="#" id="login">Login</a></li>
+				<li><a href="#" id="perfil">Meu Perfil</a></li>
 			</ul>
 		</div>
+		
+		
 
 	</div>
 
