--- a/tcc/src/main/resources/templates/estabelecimento/formEstabelecimento.html
+++ b/tcc/src/main/resources/templates/estabelecimento/formEstabelecimento.html
@@ -42,7 +42,7 @@
 
 		<div class="caixaPesquisa">
 			<div class="pesquisa">
-				<input type="search" id="inputPesquisa" onkeyup="filtrar()" placeholder="Oque você busca ?">
+				<input type="search" id="inputPesquisa"  placeholder="Oque você busca ?">
 			</div>
 
 			<div class="listaProdutos">
@@ -59,8 +59,10 @@
 				<li><a href="/estabelecimento/cadastrar">Indicar um Local</a></li>
 				<li><a href="/estabelecimentos/todos">Estabelecimentos</a></li>
 				<li><a href="#" id="login">Login</a></li>
+				<li><a href="#" id="perfil">Meu Perfil</a></li>
 			</ul>
 		</div>
+
 
 
 	</div>
@@ -216,6 +218,8 @@
 	<!-- Mapa -->
 	<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
 		integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+
+	<script src="/js/scriptHome.js"></script>
 	<script src="/js/scriptFormEstabelecimento.js"></script>
 
 
